Free and Pay Mobile Games

--- a/Project_1_Jupyter_Notebook.ipynb
+++ b/Project_1_Jupyter_Notebook.ipynb
@@ -10669,44 +10669,274 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'data_file_googleApps_path' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-191-b16ad98a1a6c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata_file_googleApps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_file_googleApps_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m#show Dataframe without duplicates\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mdata_file_googleApps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata_file_googleApps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop_duplicates\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msubset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"App\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdata_file_googleApps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata_file_googleApps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdata_file_googleApps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Category'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontains\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"GAME\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcase\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mdata_file_googleApps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"YEAR\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mdata_file_googleApps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Last Updated\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\",\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'data_file_googleApps_path' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "data_file_googleApps = pd.read_csv(data_file_googleApps_path)\n",
-    "#show Dataframe without duplicates\n",
-    "data_file_googleApps = data_file_googleApps.drop_duplicates(subset=\"App\")\n",
-    "data_file_googleApps = data_file_googleApps[data_file_googleApps['Category'].str.contains(\"GAME\",case=False)]\n",
-    "data_file_googleApps[\"YEAR\"]= data_file_googleApps[\"Last Updated\"].str.split(\",\").str.get(-1)\n",
-    "del data_file_googleApps['Current Ver']\n",
-    "del data_file_googleApps['Content Rating']\n",
-    "del data_file_googleApps['Price']\n",
-    "del data_file_googleApps['Installs']\n",
-    "del data_file_googleApps['Size']\n",
-    "del data_file_googleApps['Reviews']\n",
-    "del data_file_googleApps['Android Ver']\n",
-    "del data_file_googleApps['Last Updated']\n",
-    "del data_file_googleApps['Genres']\n",
-    "data_file_googleApps"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# "
+    "# Most successful bussines modeles for Mobile Games"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>App</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>YEAR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1654</td>\n",
+       "      <td>Subway Surfers</td>\n",
+       "      <td>GAME</td>\n",
+       "      <td>4.500000</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1661</td>\n",
+       "      <td>Temple Run 2</td>\n",
+       "      <td>GAME</td>\n",
+       "      <td>4.300000</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1655</td>\n",
+       "      <td>Candy Crush Saga</td>\n",
+       "      <td>GAME</td>\n",
+       "      <td>4.400000</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>1722</td>\n",
+       "      <td>My Talking Tom</td>\n",
+       "      <td>GAME</td>\n",
+       "      <td>4.500000</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1662</td>\n",
+       "      <td>Pou</td>\n",
+       "      <td>GAME</td>\n",
+       "      <td>4.300000</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>584</th>\n",
+       "      <td>7402</td>\n",
+       "      <td>Trovami se ci riesci</td>\n",
+       "      <td>GAME</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>900</th>\n",
+       "      <td>10776</td>\n",
+       "      <td>Monster Ride Pro</td>\n",
+       "      <td>GAME</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>543</th>\n",
+       "      <td>6700</td>\n",
+       "      <td>Brick Breaker BR</td>\n",
+       "      <td>GAME</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>479</th>\n",
+       "      <td>5917</td>\n",
+       "      <td>Ra Ga Ba</td>\n",
+       "      <td>GAME</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>Paid</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>892</th>\n",
+       "      <td>10697</td>\n",
+       "      <td>Mu.F.O.</td>\n",
+       "      <td>GAME</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>Paid</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>913 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     index                   App Category   Rating  Type   YEAR\n",
+       "1     1654        Subway Surfers     GAME 4.500000  Free   2018\n",
+       "8     1661          Temple Run 2     GAME 4.300000  Free   2018\n",
+       "2     1655      Candy Crush Saga     GAME 4.400000  Free   2018\n",
+       "55    1722        My Talking Tom     GAME 4.500000  Free   2018\n",
+       "9     1662                   Pou     GAME 4.300000  Free   2018\n",
+       "..     ...                   ...      ...      ...   ...    ...\n",
+       "584   7402  Trovami se ci riesci     GAME 5.000000  Free   2017\n",
+       "900  10776      Monster Ride Pro     GAME 5.000000  Free   2018\n",
+       "543   6700      Brick Breaker BR     GAME 5.000000  Free   2018\n",
+       "479   5917              Ra Ga Ba     GAME 5.000000  Paid   2017\n",
+       "892  10697               Mu.F.O.     GAME 5.000000  Paid   2017\n",
+       "\n",
+       "[913 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#data_file_googleApps = pd.read_csv(data_file_googleApps_path)\n",
+    "# Loading Google Play Store\n",
+    "#file_to_load = \"archive_android/googleplaystore.csv\"\n",
+    "\n",
+    "# Read Google Play Store File and store into Pandas data frame\n",
+    "#google_playstore = pd.read_csv(file_to_load)\n",
+    "#google_playstore.head()\n",
+    "\n",
+    "#show Dataframe without duplicates\n",
+    "#google_playstore_games = google_playstore.drop_duplicates(subset=\"App\")\n",
+    "#google_playstore_games = google_playstore[google_playstore_games['Category'].str.contains(\"GAME\",case=False)]\n",
+    "google_playstore_games[\"YEAR\"]= google_playstore_games[\"Last Updated\"].str.split(\",\").str.get(-1)\n",
+    "del google_playstore_games['Current Ver']\n",
+    "del google_playstore_games['Content Rating']\n",
+    "del google_playstore_games['Price']\n",
+    "del google_playstore_games['Installs']\n",
+    "del google_playstore_games['Size']\n",
+    "del google_playstore_games['Reviews']\n",
+    "del google_playstore_games['Android Ver']\n",
+    "del google_playstore_games['Last Updated']\n",
+    "del google_playstore_games['Genres']\n",
+    "google_playstore_games"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Apps</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Type</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Free</th>\n",
+       "      <td>837</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Paid</th>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Total Apps\n",
+       "Type            \n",
+       "Free         837\n",
+       "Paid          76"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "google_playstore_games = google_playstore_games.groupby('Type')\n",
+    "google_playstore_games\n",
+    "\n",
+    "overview_total_apps = google_playstore_games[\"App\"].count()\n",
+    "#overview_average_Rating_average = data_file_googleApps[\"Rating\"].mean()\n",
+    "\n",
+    "data = {\"Total Apps\":overview_total_apps\n",
+    "         \n",
+    "}\n",
+    "df = pd.concat(data,axis=1)\n",
+    "df"
    ]
   },
   {
